Update package meta

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "rivets",
+  "name": "rivets-extra",
   "description": "Declarative data binding + templating solution.",
   "homepage": "http://rivetsjs.com",
   "version": "0.8.1",
