--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rivets",
+  "name": "rivets-extra",
   "description": "Declarative data binding + templating solution.",
   "version": "0.8.1",
   "author": "Michael Richards",
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mikeric/rivets.git"
+    "url": "https://github.com/altmind/rivets.git"
   },
   "dependencies": {
     "sightglass": "~0.2.4"
